--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.1",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.23.24",
     "next": "15.5.7",
     "react": "19.1.0",
